--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,24 +2,37 @@
 <h3 class=" m-5 text-center">Hola, esta es una pagina para redireccionar a cada endpoint de manera mas facil</h3>
 
 {{#if loguedUser}}
-<div class=" d-flex flex-wrap border border-success rounded p-4 m-4 justify-content-around">
-    <h5 class="w-100">USUARIO LOGUEADO</h5>
-    <p class="pe-5 w-25">Nombre: {{user.first_name}}</p>
-    <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
-    <p class="pe-5 w-25">Email: {{user.email}}</p>
-    <p class="pe-5 w-25">Edad: {{user.age}}</p>       
-    <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>
-    <p class="pe-5 w-50">ID carrito: {{user.cart}}</p>        
-        <div class="container  w-50 d-flex">            
-            <button class="btn btn-outline-primary w-50 me-2" onclick="redirigirProductos()">Ver Productos</button>
-            <button class="btn btn-outline-primary w-50 me-2" onclick="goToUserProfile()">Ver perfil</button>
-            <form id="formLogOut" class="w-50">
+    <div class=" d-flex flex-wrap border border-success rounded p-4 m-4 justify-content-around">
+    {{#if user.username}}
+        <h5 class="w-100">{{user.role}}</h5>
+        <p class="pe-5 w-25">Username Github: {{user.username}}</p>
+        <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
+        <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>            
+    {{else}}
+        <h5 class="w-100">{{user.role}}</h5>
+        <p class="pe-5 w-25">Nombre: {{user.first_name}}</p>
+        <p class="pe-5 w-25">Apellido: {{user.last_name}}</p> 
+        <p class="pe-5 w-25">Email: {{user.email}}</p>
+        <p class="pe-5 w-25">Edad: {{user.age}}</p>       
+        <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
+        <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>    
+    {{/if}} 
+        <div class="container  w-75 d-flex  align-items-center justify-content-around ">
+            <button class="btn btn-outline-dark  m-2 w-50" onClick=goToHome()> Home </button>
+            <button class="btn btn-outline-primary   m-2 w-50" onclick="goToUserProfile()">Ver perfil</button>
+            <button class="btn btn-outline-success   m-2 w-50" onclick="redirigirProductos()">Ver productos</button>
+            <form id="formLogOut" class="m-2 w-50">
                 <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
             </form>
-            <button class="btn btn-outline-primary  m-2 w-50" onClick=goToHome()> Home </button>
+            {{#if user.adminOrPremium}}
+            <button class="btn btn-outline-info  m-2 w-50" onClick=goToAddProducts()> Crear productos </button>
+            {{/if}}           
+            {{#if user.admin}}
+            <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>
+            {{/if}}
         </div>
-</div>
-{{else}}
+    </div> 
+{{/if}}
 <h5 class="text-center mt-5">FORMULARIO DE LOGIN</h5>
 <form id="formUserLogin" action="" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
     <div class="w-100 m-2  d-flex  flex-wrap align-items-center justify-content-around">
@@ -103,6 +116,5 @@
 
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/home.js"></script>
-<script src="/js/userLogin.js"> </script>
-<script src="/js/formLogOut.js"></script>
+
+<script src="/js/userNavigation.js"></script>
