error de login solucionado passport

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -32,7 +32,8 @@
             {{/if}}
         </div>
     </div> 
-{{/if}}
+{{else}}
+
 <h5 class="text-center mt-5">FORMULARIO DE LOGIN</h5>
 <form id="formUserLogin" action="" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
     <div class="w-100 m-2  d-flex  flex-wrap align-items-center justify-content-around">
