solucion error de logueo github

--- a/views/userLogin.handlebars
+++ b/views/userLogin.handlebars
@@ -28,4 +28,4 @@
   <div>
     <button class="btn btn-outline-dark  mt-4" onClick=goToRestorePassword()>Olvide mi contraseña...</button> 
  </div>
-<script src="/js/userLogin.js"> </script>
+<script src="/js/userNavigation.js"> </script>
