modificacion estetitca purchase

--- a/views/purchase.handlebars
+++ b/views/purchase.handlebars
@@ -71,22 +71,22 @@
         </tbody>
     </table>
 </div>
-<div class=" border border-success rounded p-4 m-4 ">
-    <ul class="list-group list-group-horizontal">
-      <li class="list-group-item">Precio productos comprados</li>
-      <li class="list-group-item">${{amount}}</li>
+<div class=" border border-success rounded p-4 m-4">
+    <ul class="list-group list-group-horizontal w-100">
+      <li class="list-group-item  w-50">Precio productos comprados</li>
+      <li class="list-group-item  w-50 text-center">${{amount}}</li>
     </ul>
-    <ul class="list-group list-group-horizontal-sm">
-      <li class="list-group-item">Comprador</li>
-      <li class="list-group-item">{{purcharser}}</li>
+    <ul class="list-group list-group-horizontal w-100">
+      <li class="list-group-item  w-50">Comprador</li>
+      <li class="list-group-item  w-50 text-center">{{purcharser}}</li>
     </ul>
-    <ul class="list-group list-group-horizontal-md">
-      <li class="list-group-item">Codigo de Ticket</li>
-      <li class="list-group-item">{{code}}</li>
+    <ul class="list-group list-group-horizontal w-100">
+      <li class="list-group-item  w-50">Codigo de Ticket</li>
+      <li class="list-group-item  w-50 text-center">{{code}}</li>
     </ul>
-    <ul class="list-group list-group-horizontal-lg">
-      <li class="list-group-item">Fecha compra</li>
-      <li class="list-group-item">{{purchase_datetime}}</li>
+    <ul class="list-group list-group-horizontal w-100">
+      <li class="list-group-item  w-50">Fecha compra</li>
+      <li class="list-group-item  w-50 text-center">{{purchase_datetime}}</li>
     </ul>
 </div>
 
