--- a/views/userLogin.handlebars
+++ b/views/userLogin.handlebars
@@ -1,8 +1,8 @@
 <h5 class="text-center mt-5">FORMULARIO DE LOGIN</h5>
 
 {{#if error}}
-<div>
-    <h3>Parece que hubo un error, intenta loguandote nuevamente</h3>
+<div class="badge bg-danger text-wrap" style="width: 6rem;">
+    <p class="fs-1 text-center">Parece que hubo un error, intenta loguandote nuevamente</p>
 </div>
 {{/if}}
 {{#if success}}
