Agregado de documentacion sobre manejo de usuarios, limpieza de servidor.js

--- a/views/create-new-password.handlebars
+++ b/views/create-new-password.handlebars
@@ -14,7 +14,8 @@
             <li> DEBE tener al menos 5 caracteres </li>
         </ul>
     </div>
-    <input id="input_email" type="email" placeholder="input_email" hidden value={{email}}>
+    <input id="input_email" type="email" hidden value={{email}}>
+    <input id="input_token" type="text"  hidden value={{token}}>
     <label for="input_password"class="w-50 mt-2">Password</label>
     <input id="input_password" type="password" placeholder="input_password"class="w-50 mt-2">
 
