--- a/views/userLogin.handlebars
+++ b/views/userLogin.handlebars
@@ -1,8 +1,10 @@
 <h5 class="text-center mt-5">FORMULARIO DE LOGIN</h5>
 
 {{#if error}}
-<div class="badge bg-danger text-wrap" style="width: 6rem;">
-    <p class="fs-1 text-center">Parece que hubo un error, intenta loguandote nuevamente</p>
+<div class="d-flex justify-content-center">
+    <div class="badge bg-danger text-wrap" > <!-- style="width: 6rem;" -->
+        <p class="fs-4 text-center">Parece que hubo un error, intenta loguandote nuevamente</p>
+    </div>
 </div>
 {{/if}}
 {{#if success}}
