--- a/views/productsView.handlebars
+++ b/views/productsView.handlebars
@@ -31,6 +31,14 @@
     </div> 
 {{/if}}
 
+{{#if error}}
+<div class="d-flex justify-content-center">
+    <div class="badge bg-danger text-wrap" > <!-- style="width: 6rem;" -->
+        <p class="fs-4 text-center">Parece que hubo un error, {{message}}</p>
+    </div>
+</div>
+{{/if}}
+
 {{#if paginatedProducts.payload}}
     <table class="table table-dark table-striped">
     <thead>
