--- a/views/currentUser.handlebars
+++ b/views/currentUser.handlebars
@@ -27,6 +27,7 @@
             {{#if user.admin}}
             <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>
             {{/if}}
+            <button class="btn btn-outline-success  m-2 w-50" onClick=goToUploadDocuments()> Subir imagenes </button>
         </div>
     </div> 
     
