--- a/views/currentUser.handlebars
+++ b/views/currentUser.handlebars
@@ -13,6 +13,7 @@
         <p class="pe-5 w-25">Edad: {{user.age}}</p>       
         <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
         <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>    
+        <p class="pe-5 w-50">ID usuario: <span id="userId">{{user._id}}</span> </p>
     {{/if}} 
         <div class="container  w-75 d-flex  align-items-center justify-content-around ">
             <button class="btn btn-outline-dark  m-2 w-50" onClick=goToHome()> Home </button>
@@ -53,16 +54,11 @@
  </div>
 {{/if}}
 
-
-
 {{#if user.addProductsAllowed}}
 <div class=" border border-primary rounded p-4 m-4  d-flex  flex-wrap align-items-center justify-content-around">
     <button class="btn btn-outline-info  m-2 w-50" onClick=goToAddProducts()> ¿Quieres agregar nuevos productos? </button>          
 </div>
 {{/if}}
-
-
-
 
 {{#if products}}
     <table class="table table-striped text-center" id="{{user.cart}}">
