--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,6 +16,7 @@
         <p class="pe-5 w-25">Edad: {{user.age}}</p>       
         <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
         <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>    
+        <p class="pe-5 w-50">ID usuario: <span id="userId">{{user._id}}</span> </p>
     {{/if}} 
         <div class="container  w-75 d-flex  align-items-center justify-content-around ">
             <button class="btn btn-outline-dark  m-2 w-50" onClick=goToHome()> Home </button>
@@ -30,6 +31,7 @@
             {{#if user.admin}}
             <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>
             {{/if}}
+            <button class="btn btn-outline-success  m-2 w-50" onClick=goToUploadDocuments()> Subir imagenes </button>
         </div>
     </div> 
 {{else}}
