--- a/views/uploadImages.handlebars
+++ b/views/uploadImages.handlebars
@@ -32,6 +32,18 @@
     </div>
 </div> 
 <div class="p-4 m-4 border border-success rounded ">
+    <h4>Archivos actuales</h4>
+        {{#if user.documents}}
+            {{#each user.documents}}
+                <div  class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
+                    <p class="w-25">{{this.name}}</p>
+                    <p class="w-25">{{this.reference}}</p>
+                    <img src={{this.reference}} alt="" style="width: 50px;height:50px">                    
+                </div>
+            {{/each}}
+        {{else}}
+        <h6>Parece que aun no hay archivos cargados</h6>
+        {{/if}}
     <h4>Sube tus archivos</h4>
     <form action="/api/users/{{user._id}}/documents/document/" method="post" enctype="multipart/form-data" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
         <h5 class="w-25">Documentos</h5>
