--- a/views/uploadImages.handlebars
+++ b/views/uploadImages.handlebars
@@ -33,11 +33,11 @@
 </div> 
 <div class="p-4 m-4 border border-success rounded ">
     <h5>Archivos actuales</h5>    
-        <div class="p-2 m-2 border border-primary rounded">
+        <div class="p-2 m-2 border border-dark rounded">
         {{#if profileFiles}}
         <h6>Fotos de perfil</h6>
             {{#each profileFiles}}
-                <div  class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
+                <div  class="p-2 m-2 border border-primary rounded d-flex flex-wrap justify-content-around">
                     <p class="w-25">{{this.name}}</p>
                     <p class="w-25">{{this.reference}}</p>
                     <img src={{this.reference}} alt="" style="width: 50px;height:50px">         
@@ -47,16 +47,22 @@
         {{else}}
         <h6>Parece que aun no fotos de perfil cargadas</h6>
         {{/if}}
+        <form action="/api/users/{{user._id}}/documents/profile/"  method="post" enctype="multipart/form-data" class="p-2 m-2 border border-success rounded d-flex flex-wrap justify-content-around">
+            <h5 class="w-25">Fotos de perfil</h5>
+            <input type="file" name="profilePhoto" />
+            <span class=" m-2 d-flex justify-content-center">
+                <button type="submit" class="btn btn-success">¡ Subir archivo! </button>
+            </span>
+        </form>
         </div>
 
 
-        <div class="p-2 m-2 border border-primary rounded">
+        <div class="p-2 m-2 border border-dark rounded">
         {{#if documentsFiles}}
             <h6>Documentos</h6>
             {{#each documentsFiles}}
-                <div  class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
-                    <p class="w-25">{{this.name}}</p>
-                    <p class="w-25">{{this.reference}}</p>
+                <div  class="p-2 m-2 border border-primary rounded d-flex flex-wrap justify-content-around">
+                    <p class="w-50">{{this.name}}</p>
                     <img src={{this.reference}} alt="" style="width: 50px;height:50px">         
                     <button class="btn btn-outline-danger  m-2 " onClick="deleteDocument(`{{../user._id}}` , `{{this.name}}`)" >Eliminar</button>          
                 </div>
@@ -64,13 +70,20 @@
         {{else}}
         <h6>Parece que aun no hay documentos cargados</h6>
         {{/if}}
+        <form action="/api/users/{{user._id}}/documents/document/" method="post" enctype="multipart/form-data" class="p-2 m-2 border border-success rounded d-flex flex-wrap justify-content-around">
+            <h6 class="w-25">Subir archivo</h6>
+            <input type="file" name="documentPhoto" />
+                <span class=" m-2 d-flex justify-content-center">
+                    <button type="submit" class="btn btn-success">¡ Subir archivo! </button>
+                </span>
+        </form>
         </div>
 
-        <div class="p-2 m-2 border border-primary rounded">
+        <div class="p-2 m-2 border border-dark rounded">
         {{#if productsFiles}}
             <h6>Fotos de producto</h6>
             {{#each productsFiles}}
-                <div  class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
+                <div class="p-2 m-2 border border-primary rounded d-flex flex-wrap justify-content-around">
                     <p class="w-25">{{this.name}}</p>
                     <p class="w-25">{{this.reference}}</p>
                     <img src={{this.reference}} alt="" style="width: 50px;height:50px">         
@@ -80,30 +93,17 @@
         {{else}}
         <h6>Parece que aun no hay fotos de productos cargadas</h6>
         {{/if}}
+        <form action="/api/users/{{user._id}}/documents/product/"  method="post" enctype="multipart/form-data" class="p-2 m-2 border border-success rounded d-flex flex-wrap justify-content-around">
+            <h5 class="w-25">Fotos de productos</h5>
+            <input type="file" name="productPhoto" />
+                <span class=" m-2 d-flex justify-content-center">
+                    <button type="submit" class="btn btn-success">¡ Subir archivo! </button>
+                </span>
+        </form>
         </div>
 
-    <h4>Sube tus archivos</h4>
-    <form action="/api/users/{{user._id}}/documents/document/" method="post" enctype="multipart/form-data" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
-        <h5 class="w-25">Documentos</h5>
-        <input type="file" name="documentPhoto" />
-            <span class=" m-2 d-flex justify-content-center">
-                <button type="submit" class="btn btn-success">¡ Subir archivo! </button>
-            </span>
-    </form>
-    <form action="/api/users/{{user._id}}/documents/product/"  method="post" enctype="multipart/form-data" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
-        <h5 class="w-25">Fotos de productos</h5>
-        <input type="file" name="productPhoto" />
-            <span class=" m-2 d-flex justify-content-center">
-                <button type="submit" class="btn btn-success">¡ Subir archivo! </button>
-            </span>
-    </form>
-    <form action="/api/users/{{user._id}}/documents/profile/"  method="post" enctype="multipart/form-data" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
-        <h5 class="w-25">Fotos de perfil</h5>
-        <input type="file" name="profilePhoto" />
-            <span class=" m-2 d-flex justify-content-center">
-                <button type="submit" class="btn btn-success">¡ Subir archivo! </button>
-            </span>
-    </form>
+
+
 </div>
 
 <script src="/js/userNavigation.js"> </script>
