--- a/views/formularioEdiccionProductos.handlebars
+++ b/views/formularioEdiccionProductos.handlebars
@@ -13,7 +13,8 @@
             <p class="pe-5 w-25">Email: {{user.email}}</p>
             <p class="pe-5 w-25">Edad: {{user.age}}</p>       
             <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
-            <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>    
+            <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>  
+            <p class="pe-5 w-50">ID usuario: <span id="userId">{{user._id}}</span> </p>  
         {{/if}} 
             <div class="container  w-75 d-flex  align-items-center justify-content-around ">
                 <button class="btn btn-outline-dark  m-2 w-50" onClick=goToHome()> Home </button>
