--- a/views/formularioProductos.handlebars
+++ b/views/formularioProductos.handlebars
@@ -1,4 +1,4 @@
-<h1 class=" p-3">Ediccion de productos</h1>
+<h1 class=" p-3">Crear nuevo producto</h1>
     {{#if loguedUser}}
         <div class=" d-flex flex-wrap border border-success rounded p-4 m-4 justify-content-around">
         {{#if user.username}}
@@ -14,6 +14,7 @@
             <p class="pe-5 w-25">Edad: {{user.age}}</p>       
             <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
             <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>    
+            <p class="pe-5 w-50">ID usuario: <span id="userId">{{user._id}}</span> </p>
         {{/if}} 
             <div class="container  w-75 d-flex  align-items-center justify-content-around ">
                 <button class="btn btn-outline-dark  m-2 w-50" onClick=goToHome()> Home </button>
@@ -28,10 +29,11 @@
                 {{#if user.admin}}
                 <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>
                 {{/if}}
+                <button class="btn btn-outline-success  m-2 w-50" onClick=goToUploadDocuments()> Subir imagenes </button>
             </div>
         </div> 
     {{/if}}
-<div class=" p-3 text-end">
+<div class=" p-3 text-end border border-success rounded p-4 m-4">
     <form class="d-flex flex-wrap" id="formCargaProducto" action="/api/products" method="post">
         <div class="mb-3 d-flex w-50">
             <label for="title" class="form-label p-1 w-25">Nombre</label>
