--- a/views/membership-user-list.handlebars
+++ b/views/membership-user-list.handlebars
@@ -40,7 +40,7 @@
     <thead>
         <tr>
         <th scope="col">Email</th>
-        <th scope="col">ID</th>
+        <th scope="col">Nombre y apellido</th>
         <th scope="col">Ult conexion</th>
         <th scope="col" class="text-center">Rol actual</th>
         <th scope="col" class="text-center">Acciones</th>
@@ -49,8 +49,8 @@
     <tbody>
         {{#each users.payload}}            
             <tr>    
-                <td>{{this.email}}</td>
-                <td>{{this._id}}</td>
+                <td class="w-25">{{this.email}}</td>
+                <td class="w-25">{{this.first_name}} {{this.first_name}}</td>
                 <td>{{this.last_connection}}</td> 
                 <td class="text-center">
                     {{#if this.administrador}}
@@ -64,7 +64,6 @@
                     {{/if}}
                 </td>  
                 <td>                           
-                    <!-- ACA DEBERIA HACER CODINCIONALES PARA LA PARTE ESTETICAPARA QUE DIGA CAMBIAR A PREMIUM O CAMBIAR A USER.. -->
                     <div class="d-flex flex-wrap">
                         {{#if this.usuario}}                              
                             <button onClick=changeMembership("{{this._id}}") type="button" class="btn btn-outline-success w-100 m-1"> Cambiar a premium </button>
