--- a/views/formularioEdiccionProductos.handlebars
+++ b/views/formularioEdiccionProductos.handlebars
@@ -27,7 +27,8 @@
                 <button class="btn btn-outline-info  m-2 w-50" onClick=goToAddProducts()> Crear productos </button>
                 {{/if}}           
                 {{#if user.admin}}
-                <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>
+                <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>                
+                <button class="btn btn-outline-warning  m-2 w-50" onClick=deleteInactiveUsers()> Borrar usuarios inactivos</button>
                 {{/if}}
             </div>
         </div> 
