--- a/views/uploadImages.handlebars
+++ b/views/uploadImages.handlebars
@@ -26,7 +26,8 @@
         <button class="btn btn-outline-info  m-2 w-50" onClick=goToAddProducts()> Crear productos </button>
         {{/if}}           
         {{#if user.admin}}
-        <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>
+        <button class="btn btn-outline-warning  m-2 w-50" onClick=goToMembershipsList()> Ver usuarios </button>                
+            <button class="btn btn-outline-warning  m-2 w-50" onClick=deleteInactiveUsers()> Borrar usuarios inactivos</button>
         {{/if}}
         <button class="btn btn-outline-success  m-2 w-50" onClick=goToUploadDocuments()> Subir imagenes </button>
     </div>
