--- a/views/membership-user-list.handlebars
+++ b/views/membership-user-list.handlebars
@@ -72,6 +72,7 @@
                         {{#if this.premium}}
                             <button onClick=changeMembership("{{this._id}}") type="button" class="btn btn-outline-danger w-100 m-1"> Cambiar a regular </button>
                         {{/if}}
+                            <button onClick=deleteUser("{{this._id}}") type="button" class="btn btn-danger w-100 m-1"> X </button>
                     </div> 
                 </td>                
             </tr>
