--- a/views/userLogin.handlebars
+++ b/views/userLogin.handlebars
@@ -2,8 +2,8 @@
 
 {{#if error}}
 <div class="d-flex justify-content-center">
-    <div class="badge bg-danger text-wrap" > <!-- style="width: 6rem;" -->
-        <p class="fs-4 text-center">Parece que hubo un error, intenta loguandote nuevamente</p>
+    <div class="badge bg-danger text-wrap" > 
+        <p class="fs-4 text-center">{{error.message}}</p>
     </div>
 </div>
 {{/if}}
