Modificacion de logica para eliminar y agregar documetnos

--- a/views/productsView.handlebars
+++ b/views/productsView.handlebars
@@ -69,7 +69,7 @@
                         {{#if this.userIsOwner}}
                             <div class="d-flex flex-wrap">
                                 <button onClick=editProduct("{{this._id}}") type="button" class="btn btn-outline-warning w-100 m-1">
-                                    Editar (PENDIENTE)
+                                    Editar
                                 </button>
                             </div>
                             <div class="d-flex flex-wrap">
