solucion de bug con ticket para user github

--- a/views/uploadImages.handlebars
+++ b/views/uploadImages.handlebars
@@ -17,7 +17,7 @@
 {{/if}} 
     <div class="container  w-75 d-flex  align-items-center justify-content-around ">
         <button class="btn btn-outline-dark  m-2 w-50" onClick=goToHome()> Home </button>
-        <button class="btn btn-outline-primary   m-2 w-50" onclick="goToUserProfile()">Ver perfil</button>
+        <button class="btn btn-outline-primary   m-2 w-50" onclick="goToUserProfile()">Ver carrito</button>
         <button class="btn btn-outline-success   m-2 w-50" onclick="redirigirProductos()">Ver productos</button>
         <form id="formLogOut" class="m-2 w-50">
             <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
