--- a/views/productsView.handlebars
+++ b/views/productsView.handlebars
@@ -17,7 +17,7 @@
     {{/if}} 
         <div class="container  w-75 d-flex  align-items-center justify-content-around ">
             <button class="btn btn-outline-dark  m-2 w-50" onClick=goToHome()> Home </button>
-            <button class="btn btn-outline-primary   m-2 w-50" onclick="goToUserProfile()">Ver perfil<img src="/assets/icons/carrito-de-compras.png" style="height: 22px; margin-left: 5px"></button>
+            <button class="btn btn-outline-primary   m-2 w-50" onclick="goToUserProfile()">Ver carrito<img src="/assets/icons/carrito-de-compras.png" style="height: 22px; margin-left: 5px"></button>
             <button class="btn btn-outline-success   m-2 w-50" onclick="redirigirProductos()">Ver productos</button>
             <form id="formLogOut" class="m-2 w-50">
                 <button type="submit" class="btn btn-outline-danger w-100">Cerrar sesion</button>
