fix bug documents para github users

--- a/views/formularioProductos.handlebars
+++ b/views/formularioProductos.handlebars
@@ -5,7 +5,8 @@
             <h5 class="w-100">{{user.role}}</h5>
             <p class="pe-5 w-25">Username Github: {{user.username}}</p>
             <p class="pe-5 w-50">Rol de usuario : {{user.role}}</p>    
-            <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>            
+            <p class="pe-5 w-50">ID carrito: <span id="cidUser">{{user.cart}}</span> </p>
+            <p class="pe-5 w-50">ID usuario: <span id="userId">{{user._id}}</span> </p>               
         {{else}}
             <h5 class="w-100">{{user.role}}</h5>
             <p class="pe-5 w-25">Nombre: {{user.first_name}}</p>
