--- a/views/restore-password.handlebars
+++ b/views/restore-password.handlebars
@@ -6,9 +6,7 @@
 {{/if}}
 
 <form id="formResetPassword" action="" class="p-4 m-4 border border-success rounded d-flex flex-wrap justify-content-around">
-    <p>Ingresa tu email para poder continuar</p>
-
-    <label for="input_email"class="w-50 mt-2">Email</label>
+    <label for="input_email"class="w-50 mt-2">Ingresa tu email para poder continuar</label>
     <input id="input_email" type="text" placeholder="input_email"class="w-50 mt-2">
 
     <button type="submit" class="btn btn-success mt-4">¡Restablecer contraseña!</button>
